# FinancialTimeSeriesLargeModel

./: .gitattributes  .gitignore  AGENTS.md  environment.yml  pyproject.toml
configs/: binance_um_2020_2025.json  factorpanel_small.json  proxy_factor_v0.json
docs/superpowers/plans/: 2026-07-18-proxy-factor-v0.md
docs/superpowers/specs/: 2026-07-18-proxy-factor-v0-design.md
src/factorpanel_data/: __init__.py  batch.py  binance_um.py  cli.py  config.py  factors.py  materialize.py  pipeline.py  proxy_cli.py  proxy_config.py  proxy_materialize.py  proxy_quality.py  proxy_registry.py  proxy_store.py  qlib_proxy.py
src/factorpanel_fm/: __init__.py  __main__.py  _random.py  batch.py  checkpoint.py  cli.py  data.py  losses.py  model.py  runner.py  training.py  views.py
tests/: test_crypto_pipeline.py  test_factorpanel_checkpoint.py  test_factorpanel_cli.py  test_factorpanel_data.py  test_factorpanel_losses.py  test_factorpanel_model.py  test_factorpanel_public_api.py  test_factorpanel_runner.py  test_factorpanel_training.py  test_factorpanel_views.py  test_proxy_cli.py  test_proxy_materialize.py  test_proxy_qlib.py  test_proxy_quality.py  test_proxy_registry.py  test_proxy_store.py  test_range_downloader.py
tools/: range_download.py
